corrected alignment blog category

--- a/src/assets/scss/_blog.scss
+++ b/src/assets/scss/_blog.scss
@@ -2,7 +2,7 @@
     &__home {
         @include centerContainer;
         min-height: 80vh;
-        padding: 120px 10px 0;        
+        padding: 120px 0 0;        
     }
 
     &__container {
